add tf2 cards and some number tweaks